<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iFoundYou</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="icon_description">iFoundYou Icon</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_ifound_you_home">IFoundYouHomeActivity</string>
    <string name="mylocation">My Location</string>
    <string name="clocation">So here i am</string>
    <string name="title_activity_ifound_you_registration">IFoundYouRegistrationActivity</string>
    <string name="title_activity_ifound_you_register">IFoundYouRegisterActivity</string>
    <string name="registrationtitle">IFoundYou Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="title_activity_ifound_you_login">IFoundYouLoginActivity</string>
    <string name="title_activity_add_bud">AddBudActivity</string>
    <string name="addBud">Add your bud</string>
    <string name="addhim">Add Him</string>
    <string name="title_activity_ifound_you_your_bud">IFoundYouYourBudActivity</string>
    <string name="title_activity_friend_location">FriendLocationActivity</string>
    <string name="isin">is in</string>
    <string name="lastfound">Last time found :</string>
    <string name="notfound">Not Found</string>

</resources>
