<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ifoundyou.AddBudActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/addBudTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/addBud"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/emailAddBudTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addBudTextView"
        android:layout_marginRight="18dp"
        android:layout_marginTop="78dp"
        android:layout_toLeftOf="@+id/addBudTextView"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailAddBudEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailAddBudTextView"
        android:layout_alignBottom="@+id/emailAddBudTextView"
        android:layout_toRightOf="@+id/emailAddBudTextView"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/addHimButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailAddBudEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/addhim" />

</RelativeLayout>
