<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ifoundyou.IFoundYouRegisterActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/registrationTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/registrationtitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationTitleTextView"
        android:layout_marginTop="62dp"
        android:layout_toLeftOf="@+id/registrationTitleTextView"
        android:text="@string/name" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="32dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTextView"
        android:layout_below="@+id/emailTextView"
        android:layout_marginTop="36dp"
        android:text="@string/password" />

    <TextView
        android:id="@+id/cPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTextView"
        android:layout_alignRight="@+id/passwordTextView"
        android:layout_below="@+id/passwordTextView"
        android:layout_marginTop="24dp"
        android:text="@string/cpassword" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailTextView"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/passwordTextView"
        android:ems="10"
        android:inputType="text" >
 		<requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emailTextView"
        android:layout_alignLeft="@+id/nameEditText"
        android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cPasswordTextView"
        android:layout_alignLeft="@+id/emailEditText"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cPasswordTextView"
        android:layout_alignBottom="@+id/cPasswordTextView"
        android:layout_alignLeft="@+id/passwordEditText"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/register" />

</RelativeLayout>
