<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IFoundYouMainActivity" >

    <ImageView
        android:id="@+id/addBudImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addBudImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/iFoundYouRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appNameTextView"
        android:layout_alignRight="@+id/appNameTextView"
        android:layout_below="@+id/iFoundYouLoginButton"
        android:layout_marginTop="26dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/iFoundYouLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appNameTextView"
        android:layout_alignRight="@+id/iFoundYouRegisterButton"
        android:layout_below="@+id/appNameTextView"
        android:layout_marginTop="48dp"
        android:text="@string/login" />

</RelativeLayout>
